# rust-os

./: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  i686-haribote.json
asm/: asmhead.asm
src/: asm.rs  lib.rs  vga.rs
src/day2/: Makefile
src/day3/: Makefile  haribote.asm  haribote.img  haribote.lst  ipl.asm  ipl.lst
